--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dom": "^18.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.30.2",
+    "react-topbar-progress-indicator": "^4.1.1",
     "recharts": "^2.10.3",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
