--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "saasdata",
+  "name": "saaskart",
   "private": true,
   "sideEffects": false,
   "type": "module",
@@ -32,6 +32,7 @@
     "@remix-run/react": "^2.3.0",
     "@remix-run/serve": "^2.3.0",
     "@tanstack/react-table": "^8.10.7",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
@@ -49,6 +50,8 @@
     "react-slick": "^0.30.2",
     "react-topbar-progress-indicator": "^4.1.1",
     "recharts": "^2.10.3",
+    "remix-auth": "^3.6.0",
+    "remix-auth-form": "^1.4.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
@@ -58,6 +61,7 @@
     "@remix-run/eslint-config": "^2.3.0",
     "@tailwindcss/typography": "^0.5.10",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/nodemailer": "^6.4.14",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
