--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "isbot": "^3.6.8",
     "lemonsqueezy.ts": "^0.1.7",
     "lucide-react": "^0.292.0",
+    "next-themes": "^0.3.0",
     "nodemailer": "^6.9.7",
     "ofetch": "^1.3.3",
     "postgres": "^3.4.3",
@@ -54,6 +55,7 @@
     "recharts": "^2.10.3",
     "remix-auth": "^3.6.0",
     "remix-auth-form": "^1.4.0",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
@@ -70,7 +72,7 @@
     "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.4.16",
     "dotenv": "^16.3.1",
-    "drizzle-kit": "^0.20.14",
+    "drizzle-kit": "^0.20.16",
     "eslint": "^8.38.0",
     "pg": "^8.11.3",
     "postcss": "^8.4.31",
