--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "date-fns": "^3.6.0",
     "drizzle-orm": "^0.29.1",
     "isbot": "^3.6.8",
     "lemonsqueezy.ts": "^0.1.7",
@@ -48,7 +49,9 @@
     "postgres": "^3.4.3",
     "pretty-cache-header": "^1.0.0",
     "react": "^18.2.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.30.2",
     "react-topbar-progress-indicator": "^4.1.1",
@@ -72,7 +75,7 @@
     "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.4.16",
     "dotenv": "^16.3.1",
-    "drizzle-kit": "^0.20.16",
+    "drizzle-kit": "^0.20.17",
     "eslint": "^8.38.0",
     "pg": "^8.11.3",
     "postcss": "^8.4.31",
